--- a/KidsClothesShop/KidsClothesShop/KidsClothesShop.csproj
+++ b/KidsClothesShop/KidsClothesShop/KidsClothesShop.csproj
@@ -45,6 +45,8 @@
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -55,6 +57,12 @@
   <ItemGroup>
     <Compile Include="Controller\ProductLogic.cs" />
     <Compile Include="Controller\ProductTypeLogic.cs" />
+    <Compile Include="Form1.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form1.Designer.cs">
+      <DependentUpon>Form1.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\202305311407306_FirstMigration.cs" />
     <Compile Include="Migrations\202305311407306_FirstMigration.designer.cs">
       <DependentUpon>202305311407306_FirstMigration.cs</DependentUpon>
@@ -65,15 +73,17 @@
     <Compile Include="Model\ProductType.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="View\Display.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
-    <Folder Include="View\" />
-  </ItemGroup>
-  <ItemGroup>
+    <EmbeddedResource Include="Form1.resx">
+      <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202305311407306_FirstMigration.resx">
       <DependentUpon>202305311407306_FirstMigration.cs</DependentUpon>
     </EmbeddedResource>
